Fix folder title vertical alignment (Inbox, Snoozed, etc.) due to update
Gmail updated the UI recently, causing this element (usually the Gmail logo) to move up a bit vertically.

--- a/src/style.css
+++ b/src/style.css
@@ -573,11 +573,6 @@ td.apU.xY .T-KT.xf::before {
 	box-shadow: 0px 5px 4px #c6c6c6;
 }
 
-/* main menu & gmail name  */
-.gb_2b, .gb_Vb {
-	margin-top: -8px !important;
-}
-
 /* search icon */
 button.gb_ff.gb_gf  {
 	margin-top: -3px;
